<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.mefistofele.hikari.appportfolio.MainActivity">

    <TextView
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title" />

    <Button
        android:id="@+id/button_first_project"
        style="@style/ButtonStyle"
        android:text="@string/first_project" />

    <Button
        android:id="@+id/button_second_project"
        style="@style/ButtonStyle"
        android:text="@string/second_project" />

    <Button
        android:id="@+id/button_third_project"
        style="@style/ButtonStyle"
        android:text="@string/third_project" />

    <Button
        android:id="@+id/button_forth_project"
        style="@style/ButtonStyle"
        android:text="@string/forth_project" />

    <Button
        android:id="@+id/button_fifth_project"
        style="@style/ButtonStyle"
        android:text="@string/fifth_project" />

    <Button
        android:id="@+id/button_sixth_project"
        style="@style/ButtonStyle"
        android:background="#226919"
        android:text="@string/sixth_project" />

</LinearLayout>
